fixed layout issues and autoreconnect after server restart

--- a/front/css/main.css
+++ b/front/css/main.css
@@ -147,7 +147,6 @@
 
 .navbar-header .navbar-brand {
     padding-left: 70px;
-    padding-right: 80px;
 }
 
 
